Rettet contraints på Ark type og start/end places

--- a/main/YAWL-project/plugin.xml
+++ b/main/YAWL-project/plugin.xml
@@ -90,7 +90,7 @@
       <constraintProvider
             cache="true">
          <package
-               namespaceUri="http://se.compute.dtu.dk/mbse/yawl">
+               namespaceUri="westh.it/YAWL">
          </package>
          <constraints categories="org.pnml.tools.epnk.validation">
             <!--  OCL constraint from 1. 
