--- a/YAWL-simulator/plugin.xml
+++ b/YAWL-simulator/plugin.xml
@@ -21,5 +21,17 @@
             class="YAWLAnnotations.YAWLAnnotationsPackage"
             genModel="model/YawlAnnotations.genmodel"/>
    </extension>
+   
+   <extension
+         id="dk.dtu.compute.mbse.GrH.yawl.simulator"
+         name="YAWL Simulator"
+         point="org.pnml.tools.epnk.applications.applicationfactory">
+      <applicationfactory
+            class="YAWLSimulator.application.YAWLSimulatorFactory"
+            description="A simple YAWL simulator for tutorial 8 of the MBSE course">
+      </applicationfactory>
+   </extension>
 
 </plugin>
+
+
