--- a/YAWL-simulator/plugin.xml
+++ b/YAWL-simulator/plugin.xml
@@ -14,22 +14,22 @@
             genModel="model/YawlAnnotations.genmodel"/>
    </extension>
 
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <!-- @generated YawlAnnotations -->
-      <package
-            uri="westh.it/YAWLsim"
-            class="YAWLAnnotations.YAWLAnnotationsPackage"
-            genModel="model/YawlAnnotations.genmodel"/>
-   </extension>
-   
    <extension
          id="dk.dtu.compute.mbse.GrH.yawl.simulator"
          name="YAWL Simulator"
          point="org.pnml.tools.epnk.applications.applicationfactory">
       <applicationfactory
-            class="YAWLSimulator.application.YAWLSimulatorFactory"
+            class="yawl_simulator.application.YAWLSimulatorFactory"
             description="A simple YAWL simulator for tutorial 8 of the MBSE course">
       </applicationfactory>
+   </extension>
+
+   <extension point="org.eclipse.emf.ecore.generated_package">
+      <!-- @generated YawlAnnotations -->
+      <package
+            uri="westh.it/YAWLsim"
+            class="yawl_annotations.YAWLAnnotationsPackage"
+            genModel="model/YawlAnnotations.genmodel"/>
    </extension>
 
 </plugin>
